make notifications container fixed and align on screen

--- a/src/styles/notifications.css
+++ b/src/styles/notifications.css
@@ -1,12 +1,16 @@
 .notifications-container {
     padding: 8px;
     height: fit-content;
-    width: 360px;
+    width: 345px;
+    position: fixed;
     background-color: white;
     border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     display: flex;
     flex-direction: column;
+    z-index: 4;
+    right: 20px;
+    top: 53px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
